Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-110975

[Camera] Qt QML camera view on android is distorted in portrait view

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.2.8, 6.5.0, 6.6.0
    • 6.4.2
    • Multimedia
    • None
    • Qt 6.4.2
      Samsung Galaxy S9 A11
      MacOS 13.1
      Linux 22.04.1
    • Android
    • 8d5683e85 (dev), f3c7bef42 (6.4), c7dad1bb9 (6.5), 5c7273255 (tqtc/lts-6.2)
    • 2023wk08FOQtforAndroid

      Steps to reproduce:

      1. Open any project with Qt QML camera, e.g. https://doc.qt.io/qt-6/qtmultimedia-declarative-camera-example.html
      2. Build the project for Android 
      3. Run the project on a device

      Expected:  Camera should serve proper aspect ratio (should be launched in portrait mode like a native camera?)

      Actual: The camera view looks like squeezed and distorts the image unnaturally

       

      Reproducibility:  100%

        For Gerrit Dashboard: QTBUG-110975
        # Subject Branch Project Status CR V

            bartlomiejmoskal Bartlomiej Moskal
            lkos Łukasz Kosiorowski
            Votes:
            3 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes